# zappend

./: .coveragerc  .editorconfig  .flake8  .gitignore  404.html  CHANGES.md  CONFIG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.cfg  zappend.ipynb
.binder/: postBuild  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: package.yml  publish.yml  tests.yml
about/: index.html
api/: index.html
cli/: index.html
config/: index.html
docs/: about.md  api.md  cli.md  config.md  example.ipynb  guide.md  howdoi.md  index.md  intro.md  requirements.md  start.md
examples/: zappend-demo.ipynb
examples/inputs/: 20230605_P1D_CMEMS_HROC_L3-transp_BAL_32V_100m-v01.4.nc
guide/: index.html
howdoi/: index.html
intro/: index.html
requirements/: index.html
search/: search_index.json
start/: index.html
tests/: __init__.py  helpers.py  test_api.py  test_chunkutil.py  test_cli.py  test_config.py  test_context.py  test_copydir.py  test_datasetschema.py  test_encoding.py  test_fileobj.py  test_levels.py  test_log.py  test_metadata.py  test_outline.py  test_path.py  test_poller.py  test_processor.py  test_profiler.py  test_rollbackstore.py  test_slice.py  test_slicesource.py  test_slicezarr.py  test_tailoring.py  test_transaction.py  test_transmit.py  test_xrencoding.py  test_zgroup.py  test_zutil.py
tests/config/: test_attrs.py  test_config.py  test_normalize.py  test_schema.py  test_validate.py
tests/contrib/: __init__.py  test_levels.py
tests/fsutil/: __init__.py  test_fileobj.py  test_path.py  test_transaction.py
tests/slice/: test_callable.py  test_cm.py  test_source.py
zappend/: __init__.py  api.py  chunkutil.py  cli.py  config.py  context.py  copydir.py  datasetschema.py  fileobj.py  levels.py  log.py  metadata.py  path.py  poller.py  processor.py  profiler.py  rollbackstore.py  slicezarr.py  tailoring.py  transaction.py  transmit.py  zgroup.py  zutil.py
zappend/config/: __init__.py  attrs.py  config.py  defaults.py  markdown.py  normalize.py  schema.py  validate.py
zappend/contrib/: __init__.py  levels.py
zappend/fsutil/: __init__.py  fileobj.py  path.py  transaction.py
zappend/outline/: __init__.py  _helpers.py  compliance.py  dataset.py  variable.py
zappend/slice/: __init__.py  abc.py  callable.py  cm.py  common.py  factory.py  memory.py  persistent.py  source.py  temporary.py
zappend/slice/sources/: __init__.py  memory.py  persistent.py  temporary.py
zappend/slicesource/: __init__.py  abc.py  common.py  identity.py  memory.py  persistent.py  temporary.py
zappend/slicezarr/: __init__.py  abc.py  common.py  inmemory.py  persistent.py
