[metadata]
name = zappend
version = 0.0.1

[options]
install_requires =
    click
    fsspec
    jsonschema
    pyyaml
    zarr

[options.extras_require]
test =
    pytest
    pytest-cov
    black
    flake8
    flake8-bugbear

[options.entry_points]
console_scripts =
    zappend = zappend.cli:zappend

[flake8]
max-line-length = 88
extend-ignore = E203
