[metadata]
name = zappend
version = attr: zappend.version
author = Norman Fomferra
description = Tool for creating and updating a Zarr dataset from smaller slices
long_description = file: README.md
long_description_content_type = text/markdown
keywords = zarr, xarray, datacube
license = MIT

[options]
python_requires = >=3.10
install_requires = file: requirements.txt

[options.extras_require]
dev = file: requirements-dev.txt

[options.entry_points]
console_scripts =
    zappend = zappend.cli:zappend

[flake8]
max-line-length = 88
extend-ignore = E203
