[metadata]
name = zappend
version = attr: zappend.__version__
author = Norman Fomferra
description = Tool for robustly creating and updating Zarr datacubes from smaller slices
long_description = file: README.md
long_description_content_type = text/markdown
keywords = analysis ready data, data science, datacube, xarray, zarr
license = MIT
url = https://bcdev.github.io/zappend
project_urls =
	Documentation = https://bcdev.github.io/zappend/
	Issues = https://github.com/bcdev/zappend/issues
	Changelog = https://github.com/bcdev/zappend/blob/main/CHANGES.md

[options]
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt

[options.extras_require]
dev = file: requirements-dev.txt
doc = file: requirements-doc.txt

[options.entry_points]
console_scripts =
    zappend = zappend.cli:zappend

[options.packages.find]
exclude =
    test*
    doc*
    site*
    htmlcov*

[flake8]
max-line-length = 88
extend-ignore = E203
